--- a/indexDebug.html
+++ b/indexDebug.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-        <script src="./release/bundle.js"></script>
+        <script src="./app.js"></script>
         
     </body>
 
