--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="./Bootstrap/css/bootstrap.min.css" rel="stylesheet">
        
+        <link href="./normalize.css" rel="stylesheet">
         <link href="./main.css" rel="stylesheet">
         
     </head>
